fix broken css link dashboard

--- a/frontend/src/css/dashboard.css
+++ b/frontend/src/css/dashboard.css
@@ -67,10 +67,6 @@
     flex-direction:column
 }
 
-.teacher-required-square {
-    border: 1px dotted gray
-}
-
 .dashboard-cell {
   border-left: 1px dotted lightgray;
   border-right: 1px dotted lightgray;
